# raindl

./: .gitignore  .gitjournal.toml  .release.toml  .template.toml  CHANGELOG.md  Cargo.toml  LICENSE  notes.org  readme.org  rustfmt.toml  shell.nix
.github/: issue-branch.yml  release-drafter.yml
.github/workflows/: draft.yml  issue_branch.yaml  rust-test.yml
anime_dl/: Cargo.toml  README.org
anime_dl/src/: anime.rs  lib.rs  provider.rs  types.rs
anime_dl/src/provider/: gogoplay.rs
anime_dl/src/types/: anime.rs  episode.rs  quality.rs
src/: anime.rs  main.rs  provider.rs
src/provider/: gogoplay.rs
