[package]
name = "raindl"
version = "0.1.0"
authors = ["Jarmo Riikonen <amatrelan@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Anime link fetcher to watch with mpv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
        "anime_dl"
]

[dependencies]
anime_dl = { path="./anime_dl" }

clap = "3.0.0-beta.2"
log = "0.4.14"
simplelog = "0.9.0"
