[package]
name = "raindl"
version = "0.1.1-alpha.0"
authors = ["Jarmo Riikonen <amatrelan@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Anime link fetcher to watch with mpv"
publish = false
repository = "https://github.com/Amatrelan/raindl"
readme = "README.org"

[profile.release]
lto = true
codegen-units = 1


[workspace]
members = [
   "anime_dl"
]

[dependencies]
anime_dl = { path="./anime_dl" }

clap = "3.0.0-beta.2"
log = "0.4.14"
simplelog = "0.10.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [ "run-for-all", "prepush-hook", "precommit-hook", "run-cargo-test", "run-cargo-check", "run-cargo-fmt", "run-cargo-clippy" ]
