[package]
name = "anime_dl"
version = "0.1.0"
authors = ["Jarmo Riikonen <amatrelan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = [ "blocking", "json" ] }
scraper = "0.12.0"
log = "0.4.14"
